<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">World Around Me</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="username">UserName:</string>
    <string name="password">Password:</string>
    <string name="username_error">UserName is required.</string>
    <string name="email_error">Email is required.</string>
    <string name="password_error">Password is required.</string>
    <string name="firstName_error">First Name is Required</string>
    <string name="lastName_error">Last Name is Required</string>
    <string name="phoneNumber_error">Phone Number is Required\nRequired format: ##########</string>
    <string name="registration">Register</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="title_activity_main">Main</string>    
    <string name="email">Email Address:</string>
    <string name="firstName">First Name:</string>
    <string name="lastName">Last Name:</string>
    <string name="confirmPassword">Confirm Password:</string>
    <string name="phone">Phone Number:</string>
    <string name="registerButton">Register</string>
    <string name="updateButton">Update</string>
    <string name="createButton">Create</string>

    <!-- Main Menu Items -->
    <string-array name="main_array">
        <item>Who\'s Around</item>
        <item>Find Friends</item>
        <item>Track Friends</item>
        <item>Events Map</item>
        <item>Contacts</item>
        <item>Events</item>
        <item>Send Text</item>
        <item>Chat</item>
        <item>Settings</item>
    </string-array>

    <!-- Map Strings -->
    <string name="mapMenu">Map Types</string>
    <string name="eventDirections">Get Directions</string>
    <string name="currentLocation">Current Location</string>
    <string name="title_activity_map_types_menu">Map Types</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_map_marker">MapMarker</string>
    <string name="mapTypesString">Map Types</string>
    <string name="title_activity_sms">SMS</string>
    <string name="title_activity_registration">Registration</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_forgot_password">ForgotPassword</string>
    <string name="title_activity_contact">Contact</string>

    <!-- Marker Strings -->
    <string name="markerSMS">SMS</string>
    <string name="markerTrack">Track</string>
    <string name="markerChat">Chat</string>
    <string name="friend">Friend_Request</string>

    <!-- SMS -->
    <string name="recipientPhoneNumber">Enter the phone number of recipient</string>
    <string name="SMSMessage">Message</string>
    <string name="send">Send</string>
    <string name="title_activity_splash">Splash</string>
    <string name="title_activity_splash_screen">World Around Me</string>

    <!-- Splash Screen -->
    <string name="splashText">Find out who is around you</string>
    <string name="title_activity_camera">Camera</string>

    <!-- Camera -->
    <string name="finishButton">Finish</string>
    <string name="title_activity_events">Events</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Events -->
    <string name="location">Location:</string>
    <string name="address" >Address:</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="organizer">Organizer:</string>
    <string name="attending">Attending:</string>
    <string name="not_attending">Not Attending</string>
    <string name="who_is_attending">Who Is Attending</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="addevents">Create an Event</string>
    <string name="eventname">Event Name: </string>
    <string name="locationname">Location name: </string>
    <string name="eventaddress">Event Address: </string>
    <string name="eventdate">Event Date: </string>
    <string name="eventtime">Event time: </string>
    <string name="date_format">MM-DD-YYYY</string>
    <string name="time_format">HH:MM</string>
    <string name="pick_date">Set Date</string>
    <string name="pick_time">Set Time</string>
    <string name="invite">Invite</string>
    
    <!-- Travel Types -->
    <string name="bike">BIKING</string>
    <string name="drive">DRIVING</string>
    <string name="walk">WALKING</string>
    <string name="transit">TRANSIT</string>
    <string name="travelmode">SET MODE</string>
    
    
    <!-- Settings Menu Items -->
    <string name="profile">Update Profile</string>
    <string name="profilepicture">Change profile Picture </string>
    <string name="notification">Notifications</string>
    <string name="invisible">Make Me Invisible</string>
    <string name="logout">Logout</string>
    <string name="title_activity_update_profile">Update Profile</string>
    <string name="title_activity_notifications">Notifications</string>
    <string name="fullName">Full Name:</string>
    <string name="userName">User Name:</string>
    <string name="changePassword">Change Password</string>
    <string name="changePicture">Change Profile Picture</string>
    <string name="visible_friends">Visible to Friends</string>
    <string name="visible_non_friends">Visible to Anonymous</string>
    <string name="visiblebutton">Save Changes</string>
    <string name="title_activity_create_event">CreateEvent</string>
    <string name="title_activity_edit_event">EditEvent</string>

</resources>