<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="55dip"
    android:orientation="vertical" >

    <!-- Location -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/lablelocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/location"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/lablelocation"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="5dp"
            android:textColor="#ffffff" />
    </RelativeLayout>

    <!-- Address -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/lableaddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/address"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/lableaddress"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:textColor="#ffffff" />
    </RelativeLayout>

    <!-- Date -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/labledate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/date"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/labledate"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="37dp"
            android:layout_marginTop="5dp"
            android:textColor="#ffffff" />
    </RelativeLayout>

    <!-- Time -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/labletime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/time"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/labletime"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="5dp"
            android:textColor="#ffffff" />
    </RelativeLayout>

    <!-- Attending -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/lableattending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/attending"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/attending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/lableattending"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:textColor="#ffffff" />
    </RelativeLayout>

    <!-- Organizer -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/lablecreated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/organizer"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/createdBy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/lablecreated"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="5dp"
            android:textColor="#ffffff" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center" >

        
         <TextView
            android:id="@+id/invite"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dip"            
            android:text="@string/invite"
            android:textColor="#ffffff"
            android:visibility="gone" />
         
        <TextView
            android:id="@+id/who_is_attending"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dip"
            android:layout_toRightOf="@+id/invite"
            android:text="@string/who_is_attending"
            android:textColor="#ffffff"
            android:visibility="gone" />

       

        <TextView
            android:id="@+id/not_attending"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="10dip"
            android:layout_toRightOf="@+id/who_is_attending"
            android:text="@string/not_attending"
            android:textColor="#ffffff"
            android:visibility="gone" />

        <TextView
            android:id="@+id/edit"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dip"
            android:layout_toRightOf="@+id/not_attending"
            android:text="@string/edit"
            android:textColor="#ffffff"
            android:visibility="gone" />

        <TextView
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="10dip"
            android:layout_toRightOf="@+id/edit"
            android:text="@string/delete"
            android:textColor="#ffffff"
            android:visibility="gone" />
    </RelativeLayout>

</LinearLayout>