<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#444444" >

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"        
        android:orientation="vertical" >

        <CheckBox
            android:id="@+id/nonfriendvisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            
            android:text="@string/visible_non_friends"
            android:textColor="#ffffff" />

        <CheckBox
            android:id="@+id/friendvisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/visible_friends"
            android:textColor="#ffffff" />

        

    </LinearLayout>
    
    <TextView
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_below="@+id/layout"  
            android:layout_marginTop="10dp"               
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:text="@string/visiblebutton"
            android:textColor="#ffffff"
            android:textSize="15sp" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

</RelativeLayout>