<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:fillViewport="true">

    <RelativeLayout 
  		android:layout_width="match_parent"
  		android:layout_height="match_parent" 
  		android:background="#444444">

        <RelativeLayout 		    
		    android:id="@+id/relativeLayout"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_alignParentTop="true"
		    android:padding="10dp" >
        
			<ImageView
			    android:id="@+id/logo"
			    android:layout_width="100dp"
			    android:layout_height="100dp"
			    android:layout_centerHorizontal="true"			    
			    android:src="@drawable/world_around_me" 
			    />

		</RelativeLayout>

        
        <LinearLayout		    
		    android:id="@+id/innerLayout"
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:layout_below="@+id/relativeLayout"
		    android:orientation="vertical"
		    android:padding="10dip" >

		    <!-- First Name Text View -->
		    <TextView
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/firstName"
		        android:textColor="#ffffff" />

		    <!-- First Name Edit text -->
		    <EditText
				android:id="@+id/firstNameField"
		        style="@style/TextFields"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="5dip"
		        android:background="@drawable/rounded_edges"
		        android:singleLine="true" 
		        android:focusableInTouchMode="true" >
		    	<requestFocus />
		    </EditText>
		    
		    
		    <!-- Last Name Text View -->
		    <TextView
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/lastName"
		        android:textColor="#ffffff" />

		    <!-- Last Name Edit text -->
		    <EditText
				android:id="@+id/lastNameField"
		        style="@style/TextFields"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="5dip"
		        android:background="@drawable/rounded_edges"
		        android:singleLine="true" />		    
		    
		    <!-- Phone Number Text View -->
		    <TextView
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/phone"
		        android:textColor="#ffffff" />

		    <!-- Phone Number Edit text -->

		    <EditText
		        android:id="@+id/phoneNumberField"
		        style="@style/TextFields"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="5dip"
		        android:background="@drawable/rounded_edges"
		        android:inputType="number"
		        android:singleLine="true" />

		    <!-- Username Text View -->
		    <TextView
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/username"
		        android:textColor="#ffffff" />

		    <!-- Username Edit text -->

		    <EditText
		        android:id="@+id/usernameField"
		        style="@style/TextFields"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="5dip"
		        android:background="@drawable/rounded_edges"		        
		        android:singleLine="true" />
		    
		    <!-- Email Text View -->
		    <TextView
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/email"
		        android:textColor="#ffffff" />

		    <!-- Email Edit text -->

		    <EditText
		        android:id="@+id/emailField"
		        style="@style/TextFields"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="5dip"
		        android:background="@drawable/rounded_edges"
		        android:inputType="textEmailAddress"
		        android:singleLine="true" />

		    <!-- Password Text View -->
		    <TextView
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/password"
		        android:textColor="#ffffff" />

		    <!-- Password Edit text -->
		    <EditText
				android:id="@+id/passwordField"
		        style="@style/TextFields"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="5dip"
		        android:background="@drawable/rounded_edges"
		        android:password="true"
		        android:singleLine="true" />
		    		    
		    <!-- Register Button -->
		    <Button
		        android:id="@+id/registerButton"
		        android:layout_width="match_parent"
		        android:layout_height="30dp"
		        android:layout_marginTop="10dip"
		        android:background="@drawable/rounded_edges"
		        android:text="@string/registerButton" />
		    
		    </LinearLayout>

		<!-- Progress Bar -->
		<ProgressBar
		    android:id="@+id/progressBar"
		    style="?android:attr/progressBarStyleLarge"
		    android:layout_width="45dp"
		    android:layout_height="45dp"
		    android:layout_below="@+id/innerLayout"
		    android:layout_alignParentBottom="true"
		    android:layout_centerHorizontal="true"
		    />
				
  </RelativeLayout>
</ScrollView>
