<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#444444"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#444444"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#444444"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context=".Settings" >

            <ImageView
                android:id="@+id/firstNameField"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="70dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/settings_page" />

            <TextView
                android:id="@+id/profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:listSelector="@android:color/holo_blue_light"
                android:text="@string/profile"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:typeface="serif" />

            <View
                android:id="@+id/separator"
                android:layout_width="match_parent"
                android:layout_height="1dp"                
                android:layout_marginTop="7dp"
                android:background="#ffffff" />
            
            <TextView
                android:id="@+id/profilepicture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:listSelector="@android:color/holo_blue_light"
                android:text="@string/profilepicture"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:typeface="serif" />

            <View
                android:id="@+id/separator2"
                android:layout_width="match_parent"
                android:layout_height="1dp"               
                android:layout_marginTop="7dp"
                android:background="#ffffff" />

            <TextView
                android:id="@+id/notifications"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:listSelector="@android:color/holo_blue_light"
                android:text="@string/notification"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:typeface="serif" />

            <View
                android:id="@+id/separator3"
                android:layout_width="match_parent"
                android:layout_height="1dp"                
                android:layout_marginTop="7dp"
                android:background="#ffffff" />

            <TextView
                android:id="@+id/invisible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:listSelector="@android:color/holo_blue_light"
                android:text="@string/invisible"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:typeface="serif" />

            <View
                android:id="@+id/separator4"
                android:layout_width="match_parent"
                android:layout_height="1dp"                
                android:layout_marginTop="7dp"
                android:background="#ffffff" />

            <TextView
                android:id="@+id/logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:listSelector="@android:color/holo_blue_light"
                android:text="@string/logout"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:typeface="serif" />
        </LinearLayout>
        
    </RelativeLayout>

</ScrollView>