<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#444444" >

        <RelativeLayout            
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:padding="10dp" >

            <ImageView
                android:id="@+id/logo"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="1dp"
                android:src="@drawable/profile" />
        </RelativeLayout>

        <LinearLayout            
            android:id="@+id/innerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relativeLayout"
            android:orientation="vertical"
            android:padding="10dip" >
            
            
            <!-- Name Field -->
            <LinearLayout                
                android:id="@+id/innerLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dip" >

                <!-- Name Text View -->

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="40dp"
                    android:text="@string/fullName"
                    android:textColor="#ffffff" />

                <!-- Name Edit text -->

                <EditText
                    android:id="@+id/nameField"
                    style="@style/TextFields"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dip"
                    android:background="@drawable/rounded_edges"
                    android:focusableInTouchMode="true"
                    android:singleLine="true" >
                </EditText>
            </LinearLayout>
            
            
            <!-- Phone Number Field -->
            <LinearLayout                
                android:id="@+id/innerLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dip" >
            <!-- Phone Number Text View -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="10dp"
                android:text="@string/phone"
                android:textColor="#ffffff" />

            <!-- Phone Number Edit text -->

            <EditText
                android:id="@+id/phoneNumberField"
                style="@style/TextFields"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:background="@drawable/rounded_edges"
                android:singleLine="true" />
            </LinearLayout>
            
             <LinearLayout                
                android:id="@+id/innerLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dip" >
            
                <!-- User Name Text View -->

	            <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginLeft="25dp"
	                android:layout_marginRight="35dp"
	                android:text="@string/username"
	                android:textColor="#ffffff" />

	            <!-- User Name Edit text -->

	            <EditText
	                android:id="@+id/usernameField"
	                style="@style/TextFields"
	                android:layout_width="140dp"
	                android:layout_height="wrap_content"
	                android:layout_marginTop="5dip"
	                android:background="@drawable/rounded_edges"
	                android:ems="10"
	                android:singleLine="true" >

	                <requestFocus />
	            </EditText>

            </LinearLayout>
            
            
            <LinearLayout                
                android:id="@+id/innerLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dip" >
            
                <!-- Email Text View -->

	            <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginLeft="25dp"
	                android:layout_marginRight="13dp"
	                android:text="@string/email"
	                android:textColor="#ffffff" />

	            <!-- Email Edit text -->
	
	            <EditText
	                android:id="@+id/emailField"
	                style="@style/TextFields"
	                android:layout_width="140dp"
	                android:layout_height="wrap_content"
	                android:layout_marginTop="5dip"
	                android:background="@drawable/rounded_edges"
	                android:singleLine="true" />

            </LinearLayout>
            
            
            <LinearLayout                
                android:id="@+id/innerLayout5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dip" >
	            
	            <!-- Password Text View -->
	
	            <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginLeft="25dp"
	                android:layout_marginRight="40dp"
	                android:text="@string/password"
	                android:textColor="#ffffff" />
	
	            <!-- Password Edit text -->
	
	            <EditText
	                android:id="@+id/passwordField"
	                style="@style/TextFields"
	                android:layout_width="140dp"
	                android:layout_height="wrap_content"
	                android:layout_marginTop="5dip"
	                android:background="@drawable/rounded_edges"
	                android:password="true"
	                android:singleLine="true" />
            </LinearLayout>
            
            <!-- Register Button -->

            <Button
                android:id="@+id/updatebutton"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="10dip"
                android:background="@drawable/rounded_edges"
                android:text="@string/updateButton" />
        </LinearLayout>

        <!-- Progress Bar -->
        <RelativeLayout
            android:id="@+id/innerLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"            
            android:layout_below="@+id/innerLayout"
             >
        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="50dp"
            android:layout_height="50dp"            
            android:layout_centerHorizontal="true" />
        </RelativeLayout>
    </RelativeLayout>

</ScrollView>